# nexus-study

./: .env.example  .gitignore  DEPLOY_30MIN.md  README.md  package-lock.json  package.json  pyproject.toml
app/: main.py
app/core/: config.py  safe_browsing.py  study_materials_generation.py
app/routers/: __init__.py  auth.py  jitsi.py  matching.py  study_materials.py
web/: .env.example  package-lock.json  package.json
web/src/actions/: auth.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/auth/callback/: route.ts
web/src/app/study-room/: page.tsx
web/src/components/: Chat.tsx  LandingPage.tsx  Skeleton.tsx  StudyHub.tsx  VideoSection.tsx
web/src/components/ui/: tabs.tsx
